# Invoice-Ledger-walking-skeleton

./: .env.example  .gitignore  README.md  docker-compose.yml
api/: .dockerignore  Dockerfile  pyproject.toml
api/app/: main.py  warehouse.py
api/app/v1/: routes.py  schemas.py
api/tests/: test_v1_invoices_contract.py
warehouse/: .dockerignore  Dockerfile  dbt_project.yml  profiles.yml
warehouse/models/marts/: _marts_models.yml  invoice_ledger.sql
warehouse/models/staging/: _stg_models.yml  _stg_sources.yml  stg_customers.sql  stg_invoice_payments.sql  stg_invoices.sql
warehouse/seeds/: raw_customers.csv  raw_invoice_payments.csv  raw_invoices.csv
warehouse/tests/: assert_amount_paid_non_negative_for_non_void.sql  assert_amount_paid_not_greater_than_amount_due.sql  assert_is_overdue_only_for_open_invoices.sql
web/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  tsconfig.json
web/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
web/src/components/: InvoiceTable.test.tsx  InvoiceTable.tsx
web/src/lib/api/: client.ts  parse.ts  types.ts
