[project]
name = "invoice-ledger-api"
version = "0.1.0"
description = "Read-only HTTP contract over the invoice_ledger mart."
requires-python = ">=3.12"

dependencies = [
    "fastapi==0.115.*",
    "uvicorn[standard]==0.32.*",
    "duckdb==1.1.*",
    "pydantic==2.9.*",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.*",
    "pytest-asyncio==0.24.*",
    "httpx==0.27.*",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
